--- a/list.ipynb
+++ b/list.ipynb
@@ -37,20 +37,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -101,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,18 +144,8 @@
       "sarosh sorry you have been removed from the list\n",
       "ronaldo sorry you have been removed from the list\n",
       "trinity sorry you have been removed from the list\n",
-      "['neo', 'umair'] you are invited to the party\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'person' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mperson\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m you are invited to the party\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m(person)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mperson\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'person' is not defined"
+      "['neo', 'umair'] you are invited to the party\n",
+      "[]\n"
      ]
     }
    ],
@@ -188,10 +164,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['uk', 'aus', 'canada', 'swizerland', 'italy']\n",
+      "['aus', 'canada', 'italy', 'swizerland', 'uk']\n",
+      "['uk', 'aus', 'canada', 'swizerland', 'italy']\n",
+      "['uk', 'swizerland', 'italy', 'canada', 'aus']\n",
+      "['uk', 'aus', 'canada', 'swizerland', 'italy']\n",
+      "['italy', 'swizerland', 'canada', 'aus', 'uk']\n",
+      "['uk', 'aus', 'canada', 'swizerland', 'italy']\n",
+      "['aus', 'canada', 'italy', 'swizerland', 'uk']\n",
+      "['uk', 'swizerland', 'italy', 'canada', 'aus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3-8\n",
+    "places:list = [\"uk\",\"aus\",\"canada\",\"swizerland\",\"italy\"]\n",
+    "print(places)\n",
+    "\n",
+    "print(sorted(places))\n",
+    "\n",
+    "print(places)\n",
+    "\n",
+    "print(sorted(places,reverse = True))\n",
+    "\n",
+    "print(places)\n",
+    "\n",
+    "places.reverse()\n",
+    "\n",
+    "print(places)\n",
+    "\n",
+    "places.reverse()\n",
+    "\n",
+    "print(places)\n",
+    "\n",
+    "places.sort()\n",
+    "\n",
+    "print(places)\n",
+    "\n",
+    "places.sort(reverse=True)\n",
+    "\n",
+    "print(places)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['everest', 'k2', 'nanga', 'broad', 'rakaposhi']\n",
+      "['broad', 'everest', 'k2', 'nanga', 'rakaposhi']\n",
+      "['everest', 'k2', 'nanga', 'broad', 'rakaposhi']\n",
+      "['rakaposhi', 'nanga', 'k2', 'everest', 'broad']\n",
+      "['everest', 'k2', 'nanga', 'broad', 'rakaposhi']\n",
+      "['rakaposhi', 'broad', 'nanga', 'k2', 'everest']\n",
+      "['everest', 'k2', 'nanga', 'broad', 'rakaposhi']\n",
+      "['broad', 'everest', 'k2', 'nanga', 'rakaposhi']\n",
+      "['rakaposhi', 'nanga', 'k2', 'everest', 'broad']\n",
+      "['rakaposhi', 'nanga', 'k2', 'everest', 'tosheri']\n",
+      "tosheri has been removed\n",
+      "['rakaposhi', 'nanga', 'tiger', 'k2', 'everest']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3-9\n",
+    "mountain=[\"everest\",\"k2\",\"nanga\",\"broad\",\"rakaposhi\"]\n",
+    "print(mountain)\n",
+    "\n",
+    "print(sorted(mountain))\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "print(sorted(mountain, reverse=True))\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "mountain.reverse()\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "mountain.reverse()\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "mountain.sort()\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "mountain.sort(reverse=True)\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "mountain[4]=\"tosheri\"\n",
+    "\n",
+    "print(mountain)\n",
+    "\n",
+    "a = mountain.pop()\n",
+    "print(f\"{a} has been removed\")\n",
+    "\n",
+    "mountain.insert(2,\"tiger\")\n",
+    "print(mountain)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmountain\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "#3-10\n",
+    "\n",
+    "#print(mountain[11]) \n",
+    "# this code will produce an index error "
+   ]
   }
  ],
  "metadata": {
